# Generated by Django 5.0.6 on 2026-07-23 19:03

import django.db.models.deletion
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('samples', '0004_rbac_seed'),
    ]

    operations = [
        migrations.AlterField(
            model_name='sample',
            name='status',
            field=models.CharField(choices=[('DRAFT', 'Borrador'), ('PENDING_AI', 'Pendiente de IA'), ('PROCESSING', 'En procesamiento'), ('READY', 'Listo'), ('BLOCKED_BY_CONFIDENCE', 'Bloqueado por confianza'), ('ANALYST_VALIDATED', 'Validado por analista'), ('VALIDATED', 'Validado'), ('REJECTED', 'Rechazado')], default='PENDING_AI', max_length=24),
        ),
        migrations.CreateModel(
            name='Karyotype',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('model_version', models.CharField(default='u-net-v2.1+efficientnet-b3-v1.4', max_length=80)),
                ('image_path', models.CharField(blank=True, default='', max_length=512)),
                ('generated_at', models.DateTimeField(auto_now_add=True)),
                ('sample', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='karyotype', to='samples.sample')),
            ],
            options={
                'db_table': 'clinic_karyotypes',
            },
        ),
        migrations.CreateModel(
            name='Chromosome',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('predicted_class', models.CharField(choices=[('1', '1'), ('2', '2'), ('3', '3'), ('4', '4'), ('5', '5'), ('6', '6'), ('7', '7'), ('8', '8'), ('9', '9'), ('10', '10'), ('11', '11'), ('12', '12'), ('13', '13'), ('14', '14'), ('15', '15'), ('16', '16'), ('17', '17'), ('18', '18'), ('19', '19'), ('20', '20'), ('21', '21'), ('22', '22'), ('X', 'X'), ('Y', 'Y')], max_length=2)),
                ('position_index', models.IntegerField(default=0)),
                ('confidence_score', models.DecimalField(blank=True, decimal_places=3, max_digits=4, null=True)),
                ('bbox', models.JSONField(blank=True, default=dict)),
                ('measures', models.JSONField(blank=True, default=dict)),
                ('resolution_status', models.CharField(choices=[('AUTO', 'Automático (verde)'), ('PENDING', 'Pendiente (naranja)'), ('RESOLVED', 'Resuelto')], default='AUTO', max_length=10)),
                ('xai_viewed', models.BooleanField(default=False)),
                ('order', models.IntegerField(default=0)),
                ('karyotype', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='chromosomes', to='samples.karyotype')),
            ],
            options={
                'db_table': 'clinic_chromosomes',
                'ordering': ['order', 'position_index'],
            },
        ),
    ]
